--- a/ssb.html
+++ b/ssb.html
@@ -46,9 +46,9 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthSumSol">SOL BALANCE</span></td><td><span id="bgether">&nbsp;<span id="_sols">?</span>&nbsp;</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthAdrSol">SOL RECEIVER</span></td><td><input type="text" class="long" value="" id="to"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="AuthPaySol" id="_button_AuthPaySol">SEND SOL</a></td><td><input type="text" class="money" value="0" id="sol"/>&nbsp;SOL</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthSumSol">?</span></td><td><span id="bgether">&nbsp;<span id="_sols">?</span>&nbsp;</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthAdrSol">?</span></td><td><input type="text" class="long" value="" id="to"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="AuthPaySol" id="_button_AuthPaySol">?</a></td><td><input type="text" class="money" value="0" id="sol"/>&nbsp;SOL</td></tr>
 </table>
 <div class="result" id="_sendeth_status"></div>
 <div class="result" id="_sendeth_hash"></div>
@@ -61,7 +61,7 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">?</span></td><td><span id="_note_BipAdRight">?</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrSol">SOLANA DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1.gif"><span class="result">Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrSol">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1.gif"><span class="result">Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1</span></a></td></tr>
 </table>
 <div class="result" id="_ad_status"></div>
 <div class="result" id="_help_ad"></div>
