--- a/walgo.html
+++ b/walgo.html
@@ -33,8 +33,8 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><a class="button" data-action="Bip3AccNew" id="_button_BipeAccNew">?</a></td><td><span class="textnotice" id="_label_BipeAccNew"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip3AccAgr">ALGORAND WALLET</span></td><td><input type="text" class="address" value="" id="new_algo"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip3AccKey">ALGORAND PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="new_key"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip3AccAgr">?</span></td><td><input type="text" class="address" value="" id="new_algo"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip3AccKey">?</span></td><td><input type="text" class="copy" value="" id="new_key"/></td></tr>
 <tr><td class="buttoner"><span class="label" id="_label_BipCaution">?</span></td><td><span class="textnotice" id="_note_BipCaution">?</span></td></tr>
 </table>
 <div class="result" id="_account_status"><span id="_note_BipAccount">?</span></div>
@@ -47,10 +47,10 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip3OldKey">ALGORAND PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="old_key"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip3OldKey">?</span></td><td><input type="text" class="copy" value="" id="old_key"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeEncPwd">?</span></td><td><input type="password" class="address" value="" id="enc_pwd"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="Bip3Encrpt" id="_button_BipEncrypt">?</a></td><td><span class="textnotice" id="_label_BipEncrypt"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip3OldAgr">ALGORAND WALLET</span></td><td><input type="text" class="address" value="" id="old_algo"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip3OldAgr">?</span></td><td><input type="text" class="address" value="" id="old_algo"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeEncBip">?</span></td><td><input type="text" class="address" value="" id="enc_bip"/></td></tr>
 <tr><td class="buttoner"><span class="label" id="_label_BipWarning">?</span></td><td><span class="textnotice" id="_note_BipWarning">?</span></td></tr>
 </table>
@@ -67,8 +67,8 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip">?</span></td><td><input type="text" class="address" value="" id="dec_bip"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd">?</span></td><td><input type="password" class="address" value="" id="dec_pwd"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="Bip3Decrpt" id="_button_BipDecrypt">?</a></td><td><span class="textnotice" id="_label_BipDecrypt"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip3ExpAgr">ALGORAND WALLET</span></td><td><input type="text" class="address" value="" id="exp_algo"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip3ExpKey">ALGORAND PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="exp_key"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip3ExpAgr">?</span></td><td><input type="text" class="address" value="" id="exp_algo"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip3ExpKey">?</span></td><td><input type="text" class="copy" value="" id="exp_key"/></td></tr>
 </table>
 <div class="result" id="_decrypt_status"></div>
 <div class="result" id="_help_decrypt"></div>
@@ -83,7 +83,7 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdAbout">?</span></td><td><span id="_note_BipAdAbout">?</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdUsage">?</span></td><td><span id="_note_BipAdUsage">?</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">?</span></td><td><span id="_note_BipAdRight">?</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrAgr">ALGORAND DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/DOSACEX2YZ55F7J5WFTYND3D275QW6CYPDHYHA76L6O5232RQIXYATM4AI.gif"><span class="result">DOSACEX2YZ55F7J5WFTYND3D275QW6CYPDHYHA76L6O5232RQIXYATM4AI</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrAgr">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/DOSACEX2YZ55F7J5WFTYND3D275QW6CYPDHYHA76L6O5232RQIXYATM4AI.gif"><span class="result">DOSACEX2YZ55F7J5WFTYND3D275QW6CYPDHYHA76L6O5232RQIXYATM4AI</span></a></td></tr>
 </table>
 <div class="result" id="_ad_status"></div>
 <div class="result" id="_help_ad"></div>
