--- a/walsol.html
+++ b/walsol.html
@@ -32,8 +32,8 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><a class="button" data-action="Bip2AccNew" id="_button_BipeAccNew">?</a></td><td><span class="textnotice" id="_label_BipeAccNew"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip2AccSol">SOLANA WALLET</span></td><td><input type="text" class="address" value="" id="new_sol"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip2AccKey">SOLANA PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="new_key"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip2AccSol">?</span></td><td><input type="text" class="address" value="" id="new_sol"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip2AccKey">?</span></td><td><input type="text" class="copy" value="" id="new_key"/></td></tr>
 <tr><td class="buttoner"><span class="label" id="_label_BipCaution">?</span></td><td><span class="textnotice" id="_note_BipCaution">?</span></td></tr>
 </table>
 <div class="result" id="_account_status"><span id="_note_BipAccount">?</span></div>
@@ -46,10 +46,10 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip2OldKey">SOLANA PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="old_key"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip2OldKey">?</span></td><td><input type="text" class="copy" value="" id="old_key"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeEncPwd">?</span></td><td><input type="password" class="address" value="" id="enc_pwd"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="Bip2Encrpt" id="_button_BipEncrypt">?</a></td><td><span class="textnotice" id="_label_BipEncrypt"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip2OldSol">SOLANA WALLET</span></td><td><input type="text" class="address" value="" id="old_sol"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip2OldSol">?</span></td><td><input type="text" class="address" value="" id="old_sol"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeEncBip">?</span></td><td><input type="text" class="address" value="" id="enc_bip"/></td></tr>
 <tr><td class="buttoner"><span class="label" id="_label_BipWarning">?</span></td><td><span class="textnotice" id="_note_BipWarning">?</span></td></tr>
 </table>
@@ -66,8 +66,8 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip">?</span></td><td><input type="text" class="address" value="" id="dec_bip"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd">?</span></td><td><input type="password" class="address" value="" id="dec_pwd"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="Bip2Decrpt" id="_button_BipDecrypt">?</a></td><td><span class="textnotice" id="_label_BipDecrypt"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip2ExpSol">SOLANA WALLET</span></td><td><input type="text" class="address" value="" id="exp_sol"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Bip2ExpKey">SOLANA PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="exp_key"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip2ExpSol">?</span></td><td><input type="text" class="address" value="" id="exp_sol"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Bip2ExpKey">?</span></td><td><input type="text" class="copy" value="" id="exp_key"/></td></tr>
 </table>
 <div class="result" id="_decrypt_status"></div>
 <div class="result" id="_help_decrypt"></div>
@@ -82,7 +82,7 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdAbout">?</span></td><td><span id="_note_BipAdAbout">?</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdUsage">?</span></td><td><span id="_note_BipAdUsage">?</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">?</span></td><td><span id="_note_BipAdRight">?</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrSol">SOLANA DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1.gif"><span class="result">Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrSol">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1.gif"><span class="result">Eh5cwMd5iQP5tVtxLa88R7hr2tbj1kKSQeWMmpKvJJJ1</span></a></td></tr>
 </table>
 <div class="result" id="_ad_status"></div>
 <div class="result" id="_help_ad"></div>
