--- a/asb.html
+++ b/asb.html
@@ -33,8 +33,8 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><span class="trlab" id="_label_AuthKstRpc">?</span></td><td><input disabled class="address" value="https://mainnet-algorand.api.purestake.io/ps2" id="rpcs"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstIdx">INDEX SERVER</span></td><td><input disabled class="address" value="https://mainnet-algorand.api.purestake.io/idx2" id="idxs"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstApi">API KEY</span></td><td><input class="address" value="?" id="apikey"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstIdx">?</span></td><td><input disabled class="address" value="https://mainnet-algorand.api.purestake.io/idx2" id="idxs"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstApi">?</span></td><td><input class="address" value="?" id="apikey"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip">?</span></td><td><input class="address" value="?" id="keystore"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd">?</span></td><td><input type="password" class="address" value="xxx" id="password"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="Bip3Unlock" id="_button_BipDecrypt">?</a></td><td><span class="result" id="wallet">ALGORAND&nbsp;WALLET</span></td></tr>
@@ -49,9 +49,9 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthSumAgr">ALGO BALANCE</span></td><td><span id="bgether">&nbsp;<span id="_algos">?</span>&nbsp;</span>&nbsp;<a data-action="AuthRefAgr">?</a></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthAdrAgr">ALGO RECEIVER</span></td><td><input type="text" class="long" value="" id="to"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="AuthPayAgr" id="_button_AuthPayAgr">SEND ALGO</a></td><td><input type="text" class="money" value="0" id="algo"/>&nbsp;ALGO</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthSumAgr">?</span></td><td><span id="bgether">&nbsp;<span id="_algos">?</span>&nbsp;</span>&nbsp;<a data-action="AuthRefAgr">?</a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthAdrAgr">?</span></td><td><input type="text" class="long" value="" id="to"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="AuthPayAgr" id="_button_AuthPayAgr">?</a></td><td><input type="text" class="money" value="0" id="algo"/>&nbsp;ALGO</td></tr>
 </table>
 <div class="result" id="_sendeth_status"></div>
 <div class="result" id="_sendeth_hash"></div>
@@ -64,7 +64,7 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">?</span></td><td><span id="_note_BipAdRight">?</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrAgr">ALGORAND DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/DOSACEX2YZ55F7J5WFTYND3D275QW6CYPDHYHA76L6O5232RQIXYATM4AI.gif"><span class="result">DOSACEX2YZ55F7J5WFTYND3D275QW6CYPDHYHA76L6O5232RQIXYATM4AI</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrAgr">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/DOSACEX2YZ55F7J5WFTYND3D275QW6CYPDHYHA76L6O5232RQIXYATM4AI.gif"><span class="result">DOSACEX2YZ55F7J5WFTYND3D275QW6CYPDHYHA76L6O5232RQIXYATM4AI</span></a></td></tr>
 </table>
 <div class="result" id="_ad_status"></div>
 <div class="result" id="_help_ad"></div>
