--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <a name="VETSEND"/><a href="https://github.com/asinerum/project/tree/master/alt/node/vechain">VECHAIN [VET] SENDING TOOL FOR DESKTOPS</a><br/>
 <a name="KLTSEND"/><a href="https://github.com/asinerum/project/tree/master/alt/node/klaytn">KLAYTN [KLAY] SENDING TOOL FOR DESKTOPS</a><br/>
 <a name="ONESEND"/><a href="https://github.com/asinerum/project/tree/master/alt/node/harmony">HARMONY [ONE] SENDING TOOL FOR DESKTOPS</a><br/>
+<a name="CELSEND"/><a href="https://github.com/asinerum/project/tree/master/alt/node/celo">CELO [CELO] SENDING TOOL FOR DESKTOPS</a><br/>
 </div>
 <br/>
 <div class="header">ASINERUM COMMUNITY TOOLS</div>
