--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 <a name="KLTSEND"/><a href="https://github.com/asinerum/project/tree/master/alt/node/klaytn">KLAYTN [KLAY] SENDING TOOL FOR DESKTOPS</a><br/>
 <a name="ONESEND"/><a href="https://github.com/asinerum/project/tree/master/alt/node/harmony">HARMONY [ONE] SENDING TOOL FOR DESKTOPS</a><br/>
 <a name="CELSEND"/><a href="https://github.com/asinerum/project/tree/master/alt/node/celo">CELO [CELO] SENDING TOOL FOR DESKTOPS</a><br/>
+<a name="HNTSEND"/><a href="https://github.com/asinerum/project/tree/master/alt/node/helium">HELIUM [HNT] SENDING TOOL FOR DESKTOPS</a><br/>
+<a name="ZILSEND"/><a href="https://github.com/asinerum/project/tree/master/alt/node/zilliqa">ZILLIQA [ZIL] SENDING TOOL FOR DESKTOPS</a><br/>
 </div>
 <br/>
 <div class="header">ASINERUM COMMUNITY TOOLS</div>
