Update RPC options for tools

--- a/asb.html
+++ b/asb.html
@@ -32,8 +32,8 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstRpc">?</span></td><td><input disabled class="address" value="https://mainnet-algorand.api.purestake.io/ps2" id="rpcs"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstIdx">?</span></td><td><input disabled class="address" value="https://mainnet-algorand.api.purestake.io/idx2" id="idxs"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstRpc">?</span></td><td><input class="address" value="https://mainnet-algorand.api.purestake.io/ps2" id="rpcs"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstIdx">?</span></td><td><input class="address" value="https://mainnet-algorand.api.purestake.io/idx2" id="idxs"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_AuthKstApi">?</span></td><td><input class="address" value="?" id="apikey"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip">?</span></td><td><input class="address" value="?" id="keystore"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd">?</span></td><td><input type="password" class="address" value="xxx" id="password"/></td></tr>
