--- a/ssb.html
+++ b/ssb.html
@@ -31,7 +31,7 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstRpc">?</span></td><td><input disabled class="address" value="https://api.mainnet-beta.solana.com" id="rpcs"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstRpc">?</span></td><td><input class="address" value="https://api.mainnet-beta.solana.com" id="rpcs"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip">?</span></td><td><input class="address" value="?" id="keystore"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd">?</span></td><td><input type="password" class="address" value="xxx" id="password"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="Bip2Unlock" id="_button_BipDecrypt">?</a></td><td>SOLANA&nbsp;COIN&nbsp;<span class="result" id="wallet">WALLET</span></td></tr>
