--- a/bsb.html
+++ b/bsb.html
@@ -27,8 +27,8 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstNet">?</span></td><td><select disabled class="long" data-change="AuthNetPut" id="network"></select></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstRpc">?</span></td><td><input disabled class="address" data-change="AuthNetFix" value="https://bsc-dataseed.binance.org/" id="rpcs"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstNet">?</span></td><td><select class="long" data-change="AuthNetPut" id="network"></select></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstRpc">?</span></td><td><input class="address" data-change="AuthNetFix" value="https://bsc-dataseed.binance.org/" id="rpcs"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip">?</span></td><td><input class="address" value="?" id="keystore"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd">?</span></td><td><input type="password" class="address" value="xxx" id="password"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="BipeUnlock" id="_button_BipDecrypt">?</a></td><td>BSC&nbsp;BINANCE&nbsp;COIN&nbsp;<span class="result" id="wallet">WALLET</span></td></tr>
