--- a/asb.html
+++ b/asb.html
@@ -18,9 +18,9 @@
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_cash.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_dash.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_lite.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_algo.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_qrcode.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng.js"></script>
-<script src="https://unpkg.com/algosdk@latest"></script>
 </head>
 <body class="private">
 <div class="body" id="body">
