--- a/scr/test.html
+++ b/scr/test.html
@@ -17,6 +17,7 @@
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_lite.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_qrcode.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_axios.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_solc.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjs@6.6.4/dist/math.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
