--- a/scr/test.html
+++ b/scr/test.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" type="text/css" href="https://asinerum.github.io/project/gui/style.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
+  <!--script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script-->
+  <!--script src="https://cdn.jsdelivr.net/gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script-->
+  <script src='https://cdn.jsdelivr.net/gh/asinerum/project/scr/_web3js.js' type='text/javascript'></script>
+  <script src='https://cdn.jsdelivr.net/gh/asinerum/project/scr/_ethereumjs-tx.js' type='text/javascript'></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bitcoinjs.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_decimal.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bip.js"></script>
@@ -18,9 +20,6 @@
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_qrcode.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_axios.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_solc.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mathjs@6.6.4/dist/math.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-  <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
   <script src="https://asinerum.github.io/project/scr/xuteng.js"></script>
   </head>
   <body>
