--- a/decode.html
+++ b/decode.html
@@ -24,11 +24,7 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><span class="trlab" id="_label_AuthKstPwd">?</span></td><td><input type="password" class="address" value="xxx" id="password_v3ks"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstore">?</span></td><td><textarea class="longfat" id="keystore_v3ks"></textarea><br/>
-   <a class="link" data-action="AuthCpyKst" id="_button_AuthCpyKst">?</a>&nbsp;
-   <a class="link" data-action="AuthCokGet" id="_button_AuthCokGet">?</a>&nbsp;
-   <a class="link" data-action="AuthCokSet" id="_button_AuthCokSet">?</a>&nbsp;
-   <a class="link" data-action="AuthCokDel" id="_button_AuthCokDel">?</a>&nbsp;</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstore">?</span></td><td><textarea class="longfat" id="keystore_v3ks"></textarea></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="V3ksDecode" id="_button_AuthKstDec">?</a></td><td></td></tr>
 </table>
 <div class="result" id="_keystore_status"></div>
@@ -37,7 +33,7 @@
 <hr class="cp"/>
 <br/>
 <a name="KEYS"></a>
-<div class="header" id="_header_BipUnlock_decode">TOP SECRET: DECRYPTING BIP38 KEYSTORE</div>
+<div class="header" id="_header_BipUnlock_decode">TOP SECRET: DECRYPTING BIP38 KEY</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
