--- a/decode.html
+++ b/decode.html
@@ -11,6 +11,7 @@
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_ethereumjs-tx.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_web3js.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bip.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_eruda.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng.js"></script>
 </head>
 <body class="private">
@@ -50,5 +51,6 @@
 </div>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/startPure.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/menu.js"></script>
+<script>eruda.init();</script>
 </body>
 </html>
