--- a/ai/ml/test/forest.htm
+++ b/ai/ml/test/forest.htm
@@ -1,5 +1,8 @@
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_forest.js"></script>
 <pre>
+Ref:
+https://github.com/karpathy/forestjs/tree/master
+
 Usage:
 forest = new forestjs.RandomForest();
 // data is 2D array of size NxD. Labels is 1D array of length D
