--- a/ai/ml/test/kmeans.htm
+++ b/ai/ml/test/kmeans.htm
@@ -1,27 +1,31 @@
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_kmeans.js"></script>
 <pre>
+Ref:
+https://gist.github.com/tarunc/3141694
+
 Usage:
+//[data] is a 2D array of size NxD of numbers
 var data =
 [
-  [1, 2],
-  [2, 1],
-  [2, 4], 
-  [1, 3],
-  [2, 2],
-  [3, 1],
-  [1, 1],
-  [7, 3],
-  [8, 2],
-  [6, 4],
-  [7, 4],
-  [8, 1],
-  [9, 2],
-  [10, 8],
-  [9, 10],
-  [7, 8],
-  [7, 9],
-  [8, 11],
-  [9, 9],
+ [1, 2],
+ [2, 1],
+ [2, 4], 
+ [1, 3],
+ [2, 2],
+ [3, 1],
+ [1, 1],
+ [7, 3],
+ [8, 2],
+ [6, 4],
+ [7, 4],
+ [8, 1],
+ [9, 2],
+ [10, 8],
+ [9, 10],
+ [7, 8],
+ [7, 9],
+ [8, 11],
+ [9, 9],
 ];
 var clusters = kmeans(data);
 console.log(clusters);
